accommodate posible missing position. @Guite refs https://github.com/zikula-modules/StaticContent/commit/6fc427839dcd0cf020437300f2d9179ed2f202d5#commitcomment-41896868

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zikula/staticcontent-module",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Display static content simply.",
     "type": "zikula-module",
     "license": "MIT",
@@ -14,6 +14,7 @@
         "psr-4": { "Zikula\\StaticContentModule\\": "" }
     },
     "require": {
+        "zikula/core-bundle": "3.*",
         "php": ">=7.2.5"
     },
     "extra": {
